--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>something</title>
+  <title>Sunshine</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-  <h1>hello world</h2>
+  <h1>Hello world</h1>
   <p>A paragraph of text. With several sentences if you want.</p>
   <p>This is <strong>bold text</strong> and this will be <em>italic text</em>.</p>
-  <p><a href="page2.html"><img src="pictures/traveling.png" alt="a travel picture"></a></p>
+  <p><a href="page2.html"><img id=first src="pictures/traveling.png" alt="a travel picture"></a></p>
 </body>
 </html>
